UPDATING FEATURE BOX

--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@ a,
                     <div class="card-stack_card-content">
                       <div class="card-content-inner">
                         <div class="margin-bottom">
-                          <div class="eyebrow-text grapefruit-outline">HRT</div>
+                          <div class="eyebrow-text grapefruit-outline">Safety</div>
                         </div>
                         <h2 class="heading-style-h3 text-color-petal">Enhanced Safety for All Travelers
 
@@ -693,9 +693,9 @@ a,
                     <div class="card-stack_card-content">
                       <div class="card-content-inner">
                         <div class="margin-bottom">
-                          <div class="eyebrow-text lime-outline">weight loss</div>
+                          <div class="eyebrow-text lime-outline">How</div>
                         </div>
-                        <h3 class="heading-style-h3 text-color-petal">Travel with confidence knowing you're accompanied by a verified local companion. We prioritize safety with thorough background checks, 
+                        <h3 class="heading-style-h4 text-color-petal">Travel with confidence knowing you're accompanied by a verified local companion. We prioritize safety with thorough background checks, 
                           real-time location sharing, and specialized support for solo female travelers.
                         </h3>
                       </div>
@@ -707,7 +707,7 @@ a,
                     <div class="card-stack_card-content">
                       <div class="card-content-inner">
                         <div class="margin-bottom">
-                          <div class="eyebrow-text grapefruit-outline text-color-black">Virtual Care</div>
+                          <div class="eyebrow-text grapefruit-outline text-color-black">SAVE MONEY</div>
                         </div>
                         <h3 class="heading-style-h3 text-color-merlot pretty">Protection from 
                           Tourist Inflation
@@ -717,10 +717,9 @@ a,
                     <div class="card-stack_card-content">
                       <div class="card-content-inner">
                         <div class="margin-bottom">
-                          <div class="eyebrow-text text-color-black">support</div>
+                          <div class="eyebrow-text text-color-black">HOW</div>
                         </div>
-                        <h3 class="heading-style-h3 text-color-merlot pretty">24-hour care with physician response in as
-                          little as 6 hours</h3>
+                        <h3 class="heading-style-h4 text-color-merlot pretty">Stop paying tourist prices! Our local companions help you access fair, local rates for everything from street food to souvenirs. They'll negotiate on your behalf and steer you away from overpriced tourist traps.</h3>
                       </div>
                     </div>
                   </div>
@@ -730,7 +729,7 @@ a,
                     <div class="card-stack_card-content">
                       <div class="card-content-inner">
                         <div class="margin-bottom">
-                          <div class="eyebrow-text grapefruit-outline">labs &amp; Scans</div>
+                          <div class="eyebrow-text grapefruit-outline">TRANSLATION</div>
                         </div>
                         <h3 class="heading-style-h3 text-color-petal">Seamless
                            Communication
@@ -740,10 +739,12 @@ a,
                     <div class="card-stack_card-content">
                       <div class="card-content-inner">
                         <div class="margin-bottom">
-                          <div class="eyebrow-text">prescriptions</div>
+                          <div class="eyebrow-text">how</div>
                         </div>
-                        <h3 class="heading-style-h3 text-color-petal">Medication choices based on what&#x27;s best for
-                          you</h3>
+                        <h3 class="heading-style-h4 text-color-petal">Break through language barriers with our bilingual
+                           companions. They'll help translate conversations, read menus, negotiate with vendors, and ensure
+                            you're always understood wherever you go.
+                          </h3>
                       </div>
                     </div>
                   </div>
@@ -753,7 +754,7 @@ a,
                   <div class="card-stack_card-content">
                     <div class="card-content-inner">
                       <div class="margin-bottom">
-                        <div class="eyebrow-text grapefruit-outline text-color-black">Virtual Care</div>
+                        <div class="eyebrow-text grapefruit-outline text-color-black">WHY DID YOU VISIT INDIA AT FIRST PLACE?</div>
                       </div>
                       <h3 class="heading-style-h3 text-color-merlot pretty">Authentic
                         Cultural Experiences
@@ -763,10 +764,11 @@ a,
                   <div class="card-stack_card-content">
                     <div class="card-content-inner">
                       <div class="margin-bottom">
-                        <div class="eyebrow-text text-color-black">support</div>
+                        <div class="eyebrow-text text-color-black">HOW</div>
                       </div>
-                      <h3 class="heading-style-h3 text-color-merlot pretty">24-hour care with physician response in as
-                        little as 6 hours</h3>
+                      <h3 class="heading-style-h4 text-color-merlot pretty">Discover hidden gems and experience destinations like a true local. Our companions share insider knowledge, family traditions, 
+                        and off-the-beaten-path locations that you'd never find in guidebooks.
+                      </h3>
                     </div>
                   </div>
                 </div>
@@ -791,8 +793,8 @@ a,
                   <div class="text-align-center">
                     <div class="max-width-large">
                       <div class="margin-bottom margin-small">
-                        <h2 heading-animation="" class="heading-style-h2">Join Gliss in a new wide open space for
-                          honest, you-first care</h2>
+                        <h2 heading-animation="" class="heading-style-h2">Every aspect of Navigo is built around
+                           these core principles</h2>
                       </div>
                     </div>
                   </div>
