making core principles

--- a/index.html
+++ b/index.html
@@ -810,10 +810,10 @@ a,
                           class="image_2" /></div>
                     </div>
                     <div class="margin-bottom margin-small">
-                      <h3 class="heading-style-h4">See your doctor in whatever way feels most comfy for you</h3>
+                      <h3 class="heading-style-h4">Trust</h3>
                     </div>
-                    <p class="text_regular-normal">Get more video face-time with your Gliss OB/GYN. Or go video-free
-                      with messaging-only services.</p>
+                    <p class="text_regular-normal">Every companion undergoes rigorous background checks, identity verification, 
+                      and continuous review monitoring to ensure your peace of mind.</p>
                   </div>
                   <div card-animation="" class="benefits_item">
                     <div class="margin-bottom margin-medium">
@@ -825,10 +825,11 @@ a,
                           class="image_2" /></div>
                     </div>
                     <div class="margin-bottom margin-small">
-                      <h3 class="heading-style-h4">All your virtual healthcare needs, one private patient portal</h3>
+                      <h3 class="heading-style-h4">Safety</h3>
                     </div>
-                    <p class="text_regular-normal">Schedule your appointments, message your doctor, share your health
-                      records and more. HIPAA-compliant.</p>
+                    <p class="text_regular-normal">Travel confidently with real-time location sharing, emergency assistance, 
+                      and companions who know how to navigate local areas safely
+                    </p>
                   </div>
                   <div card-animation="" class="benefits_item">
                     <div class="margin-bottom margin-medium">
@@ -840,10 +841,10 @@ a,
                       </div>
                     </div>
                     <div class="margin-bottom margin-small">
-                      <h3 class="heading-style-h4">Customized treatment plans, prescriptions and additional support</h3>
+                      <h3 class="heading-style-h4">Cultural Connection</h3>
                     </div>
-                    <p class="text_regular-normal">Your perimenopause and menopause experience is unique to you. Your
-                      Gliss experience is, too.</p>
+                    <p class="text_regular-normal">Form meaningful relationships that transform typical tourism into profound cultural
+                       exchange and understanding.</p>
                   </div>
                 </div>
               </div>
