--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@ a,
                     <div heading-animation="" class="button-group"><a data-w-id="a691e8b5-0e6f-5370-dc83-f628970819c0"
                         href="https://secure.gethealthie.com/appointments/embed_appt?dietitian_id=4563952&amp;require_offering=true&amp;provider_ids=[4563952,5204154]&amp;offering_ids=[203967,203968,203973,173491,180293,172612,172768,172611,172769,173488,180121,180562]&amp;org_level=true&amp;hide_embed_title=false&amp;hide_package_images=false&amp;primary_color=78142d"
                         target="_blank" class="button is-small is-icon w-inline-block">
-                        <div class="button-text">Talk to Gliss</div>
+                        <div class="button-text">Talk to Navigo</div>
                         <div class="icon-embed-xsmall w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="16"
                             height="16" viewBox="0 0 16 16" fill="none">
                             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -1265,8 +1265,10 @@ a,
                 <div id="w-node-_66f6f6b5-998e-38f5-2547-09c07ac08296-7ac08291" class="footer_left-wrapper"><a
                     href="index.html" id="w-node-_66f6f6b5-998e-38f5-2547-09c07ac08297-7ac08291" aria-current="page"
                     class="footer_logo-link w-nav-brand w--current"><img
-                      src="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/6677815031ebe430f5e4a743_light-logo.svg"
-                      loading="lazy" width="161" alt="Gliss Wellness Logo" class="logo_light" /></a>
+                    src="/images/logo/logo.png"
+                    alt="Navigo"
+                    class="navbar_logo-img"
+                      loading="lazy" width="300" alt="Gliss Wellness Logo" class="logo_light" /></a>
                   <div id="w-node-_66f6f6b5-998e-38f5-2547-09c07ac08299-7ac08291"
                     class="w-layout-grid footer_link-list">
                     <div id="w-node-_66f6f6b5-998e-38f5-2547-09c07ac0829a-7ac08291" class="footer_button-wrapper"><a
@@ -1330,13 +1332,13 @@ a,
                         class="link"><span>Privacy Policy</span></a> </div>
                   </div>
                 </div>
-                <div class="footer_social-icons-wrapper"><a href="https://www.instagram.com/glisswellness/"
+                <div class="footer_social-icons-wrapper"><a href="https://www.instagram.com/trynavigo/"
                     target="_blank" class="icon-wrap w-inline-block"><img
                       src="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/67225097409a0583288a8387_instagram.svg"
-                      loading="lazy" alt="" /></a><a href="https://www.facebook.com/GlissSpot/?_rdr" target="_blank"
+                      loading="lazy" alt="" /></a><a href="https://www.instagram.com/trynavigo/" target="_blank"
                     class="icon-wrap w-inline-block"><img
                       src="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/67225097cf272dbcd363f29c_facebook.svg"
-                      loading="lazy" alt="" /></a><a href="https://www.tiktok.com/@gliss_spot" target="_blank"
+                      loading="lazy" alt="" /></a><a href="https://www.instagram.com/trynavigo/" target="_blank"
                     class="icon-wrap w-inline-block"><img
                       src="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/67225097a4842f98e969292d_tikotk.svg"
                       loading="lazy" alt="" /></a></div>
@@ -1348,9 +1350,9 @@ a,
                       class="footer_legal-link">Privacy Policy</a><a
                       id="w-node-_66f6f6b5-998e-38f5-2547-09c07ac082c7-7ac08291" href="terms-of-service.html"
                       class="footer_legal-link">Terms of Service</a><a href="https://www.findgliss.com/hipaa"
-                      class="footer_legal-link">HIPAA Statement</a></div>
+                     
                   <div class="footer_credit-text">© <span id="year" class="current-year">CURRENT YEAR</span><span
-                      class="current-year"> </span>Gliss Wellness. All rights reserved.</div>
+                      class="current-year"> </span>NAVIGO. All rights reserved.</div>
                 </div>
               </div>
             </div>
