--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><!-- Last Published: Tue Mar 25 2025 22:14:28 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="www.trynavigo.com" data-wf-page="6670bf25956a84a23b306ed1"
   data-wf-site="6670bf25956a84a23b306e42">
-<!-- Mirrored from www.findgliss.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 18 Apr 2025 20:07:10 GMT -->
 
 <head>
   <meta charset="utf-8" />
@@ -10,7 +9,7 @@
     content="Experience India like a local with Navigo's verified travel companions. Get personalized guidance, cultural insights, and authentic experiences."
     name="description" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link href="images/icons/favicon.png" rel="icon" type="image/png" />
+  <link href="images/icons/favicon.ico" rel="icon" type="image/png" />
   <link href="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/css/gliss-wellness.webflow.a2a750cae.css"
     rel="stylesheet" type="text/css" />
   <script type="text/javascript">
@@ -935,7 +934,7 @@ a,
           </div>
         </a>
       </section>
-      <section id="team" class="section_team">
+      <!-- <section id="team" class="section_team">
         <div id="w-node-_82e66a92-2685-3cc6-fc2c-6365e424ffca-3b306ed1"
           class="w-layout-layout team_grid wf-layout-layout">
           <div id="w-node-ff4a2162-bcf6-7386-1eb9-16099db8b35b-3b306ed1" class="w-layout-cell team_heading-cell">
@@ -970,7 +969,7 @@ a,
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <section id="faq" class="section_faq"><img
           src="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/6676f196d7fe2c343a71d861_arrow-round.svg"
           loading="lazy" rotate-arrow="" alt="" class="arrow-around" />
@@ -1153,7 +1152,7 @@ a,
               <div class="margin-bottom margin-xxlarge">
                 <div class="max-width-large">
                   <div class="margin-bottom margin-small">
-                    <h2 heading-animation="" class="heading-style-h1">In her words...</h2>
+                    <h2 heading-animation="" class="heading-style-h1">In their words...</h2>
                   </div>
                 </div>
               </div>
@@ -1349,7 +1348,7 @@ a,
                       id="w-node-_66f6f6b5-998e-38f5-2547-09c07ac082c5-7ac08291" href="privacy-policy.html"
                       class="footer_legal-link">Privacy Policy</a><a
                       id="w-node-_66f6f6b5-998e-38f5-2547-09c07ac082c7-7ac08291" href="terms-of-service.html"
-                      class="footer_legal-link">Terms of Service</a><a href="https://www.findgliss.com/hipaa"
+                      class="footer_legal-link">Terms of Service</a><a href="          ">
                      
                   <div class="footer_credit-text">© <span id="year" class="current-year">CURRENT YEAR</span><span
                       class="current-year"> </span>NAVIGO. All rights reserved.</div>
@@ -1474,7 +1473,6 @@ a,
     setInterval("_changeText()", 750);
   </script>
 </body>
-<!-- Mirrored from www.findgliss.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 18 Apr 2025 20:07:10 GMT -->
 
 </html>
 
