--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         t + "touch")
     }(window, document);
   </script>
-  <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-133ZQB3WW4"></script>
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-HQHJ5XL5EJ"></script>
   <script type="text/javascript">
     window.dataLayer = window.dataLayer || [];
 
@@ -29,7 +29,7 @@
     }
     gtag('js', new Date());
     gtag('set', 'developer_id.dZGVlNj', true);
-    gtag('config', 'G-133ZQB3WW4');
+    gtag('config', 'G-HQHJ5XL5EJ');
   </script><!-- Keep this css code to improve the font quality-->
   <style>
     * {
@@ -42,7 +42,7 @@
 </head>
 
 <body class="body">
-  <div class="w-embed w-iframe"><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WRVL93PK"
+  <div class="w-embed w-iframe"><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PCQN8F43"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
   </div>
@@ -1360,7 +1360,7 @@ a,
       </footer>
     </main>
   </div>
-  <div class="w-embed w-iframe"><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WRVL93PK"
+  <div class="w-embed w-iframe"><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PCQN8F43"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
   </div>
