--- a/index.html
+++ b/index.html
@@ -1442,27 +1442,27 @@ a,
     //
     //swpaper text
     var words = [
-      "sex",
-      "hot flashes",
-      "night sweats",
-      "dryness",
-      "leaks",
-      "lumps",
-      "bumps",
-      "fatigue",
-      "libido",
-      "insomnia",
-      "weight gain",
-      "hair changes",
-      "brain fog",
+      "India",
+      "Travel",
+      "Travel to india",
+      "Companion",
+      "Guide",
+      "Tourism",
+      "Experience",
+      "Authentic",
+      "India Tourism",
+      "Delhi",
+      "Jaipur",
+      "Udaipur",
+      "TravelIndia",
     ];
     var i = 0;
-    var text = "Sex";
+    var text = "India";
 
     function _getChangedText() {
       i = (i + 1) % words.length;
       console.log(words[i]);
-      return text.replace(/Sex/, words[i]);
+      return text.replace(/India/, words[i]);
     }
 
     function _changeText() {
