--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta
     content="Experience India like a local with Navigo's verified travel companions. Get personalized guidance, cultural insights, and authentic experiences."
     name="description" />
+    <meta name="keywords" content="India travel, local guide, travel companion, authentic travel, India tourism, Delhi guide, avoid scams, cultural immersion, language barrier" />
+
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="images/icons/favicon.ico" rel="icon" type="image/png" />
   <link href="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/css/gliss-wellness.webflow.a2a750cae.css"
@@ -521,10 +523,9 @@ a,
                           explorers everywhere
                         </h2>
                       </div>
-                      <p heading-animation="">Welcome to a brave new world of women's care, where you have the time and
-                        space you need to speak freely, and your doctor listens to every word. Spend up to 45 minutes
-                        per virtual visit with your Gliss OB/GYN, or choose to go messaging-only and video-free. What
-                        works best for you works best for us, too.</p>
+                      <p heading-animation="">Welcome to a revolutionary approach to travel in India, where local companions help you navigate unfamiliar territories with confidence.
+                         Experience authentic cultural immersion, avoid tourist traps, and create meaningful connections with the places you visit. 
+                         Your personalized travel experience awaits.</p>
                     </div>
                   </div>
                 </div>
