--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 </head>
 
 <body class="body">
+  
   <div class="w-embed w-iframe"><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PCQN8F43"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
@@ -286,24 +287,24 @@
         }
 
         /* 
-Make the following elements inherit typography styles from the parent and not have hardcoded values. 
-Important: You will not be able to style for example "All Links" in Designer with this CSS applied.
-Uncomment this CSS to use it in the project. Leave this message for future hand-off.
-*/
+     Make the following elements inherit typography styles from the parent and not have hardcoded values. 
+          Important: You will not be able to style for example "All Links" in Designer with this CSS applied.
+             Uncomment this CSS to use it in the project. Leave this message for future hand-off.
+                 */
         /*
-a,
-.w-input,
-.w-select,
-.w-tab-link,
-.w-nav-link,
-.w-dropdown-btn,
-.w-dropdown-toggle,
-.w-dropdown-link {
-  color: inherit;
-  text-decoration: inherit;
-  font-size: inherit;
-}
-*/
+                   a,
+                .w-input,
+            .w-select,
+            w-tab-link,
+            .w-nav-link,
+           .w-dropdown-btn,
+           .w-dropdown-toggle,
+            .w-dropdown-link {
+         color: inherit;
+           text-decoration: inherit;
+           font-size: inherit;
+                      }
+                   *           /
 
         /* Apply "..." after 3 lines of text */
         .text-style-3lines {
