--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             aria-current="page"
           class="navbar_logo-link w-nav-brand w--current">
           <img
-      src="/images/logo/logo.png"
+      src="images/logo/logo.png"
       alt="Your Site Name"
        width="230"
       height="46"
@@ -1266,7 +1266,7 @@
                 <div id="w-node-_66f6f6b5-998e-38f5-2547-09c07ac08296-7ac08291" class="footer_left-wrapper"><a
                     href="index.html" id="w-node-_66f6f6b5-998e-38f5-2547-09c07ac08297-7ac08291" aria-current="page"
                     class="footer_logo-link w-nav-brand w--current"><img
-                    src="/images/logo/logo.png"
+                    src="images/logo/logo.png"
                     alt="Navigo"
                     class="navbar_logo-img"
                       loading="lazy" width="300" alt="Gliss Wellness Logo" class="logo_light" /></a>
