--- a/Services.html
+++ b/Services.html
@@ -408,7 +408,7 @@
                 aria-current="page"
               class="navbar_logo-link w-nav-brand w--current">
               <img
-          src="/images/logo/logo.png"
+          src="images/logo/logo.png"
           alt="Your Site Name"
            width="230"
           height="46"
