adding trynavigo page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="India travel, local guide, travel companion, authentic travel, India tourism, Delhi guide, avoid scams, cultural immersion, language barrier" />
 
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link href="images/icons/favicon.ico" rel="icon" type="image/png" />
+  <link href="images/icons/favicon.ico" rel="icon" type="image/ico" />
   <link href="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/css/gliss-wellness.webflow.a2a750cae.css"
     rel="stylesheet" type="text/css" />
   <script type="text/javascript">
