--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     name="description" />
     <meta name="keywords" content="India travel, local guide, travel companion, authentic travel, India tourism, Delhi guide, avoid scams, cultural immersion, language barrier" />
 
-  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <!-- Updated viewport meta tag and additional mobile optimization tags -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="theme-color" content="#FF8255">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link href="images/icons/favicon.ico" rel="icon" type="image/ico" />
   <link href="https://cdn.prod.website-files.com/6670bf25956a84a23b306e42/css/gliss-wellness.webflow.a2a750cae.css"
     rel="stylesheet" type="text/css" />
@@ -684,9 +690,9 @@
                         <div class="margin-bottom">
                           <div class="eyebrow-text lime-outline">How</div>
                         </div>
-                        <h3 class="heading-style-h4 text-color-petal">Travel with confidence knowing you're accompanied by a verified local companion. We prioritize safety with thorough background checks, 
+                        <h4 class="heading-style-h4 text-color-petal">Travel with confidence knowing you're accompanied by a verified local companion. We prioritize safety with thorough background checks, 
                           real-time location sharing, and specialized support for solo female travelers.
-                        </h3>
+                        </h4>
                       </div>
                     </div>
                   </div>
